Add new changes