@@ -7,9 +7,17 @@ import java.net.URLClassLoader;
 import java.util.ArrayList;
 import java.util.List;
 
+import org.eclipse.core.resources.IProject;
+import org.eclipse.core.resources.ResourcesPlugin;
+import org.eclipse.core.runtime.IPath;
 import org.eclipse.ecf.remoteservice.testframework.annotaion.processer.AnnotationProcesser;
 import org.eclipse.ecf.remoteservice.testframework.model.AnnotatedTestClass;
 import org.eclipse.jdt.core.IClasspathEntry;
+import org.eclipse.jdt.core.ICompilationUnit;
+import org.eclipse.jdt.core.IJavaProject;
+import org.eclipse.jdt.core.IPackageFragment;
+import org.eclipse.jdt.core.IType;
+import org.eclipse.jdt.core.JavaCore;
 
 /**
  * This is a simple Url class loader  use to load the 
@@ -21,23 +29,25 @@ public class ServiceClassLoader {
 
 	private  URLClassLoader jdbcJarLoader;
 	private  List<AnnotatedTestClass> testClassesList;
-	private IClasspathEntry[] rawClasspath;
-
-	public ServiceClassLoader(List<String> classlist, String classpath,
-			AnnotationProcesser processer, IClasspathEntry[] rawClasspath)
-			throws MalformedURLException, ClassNotFoundException {
-
-		URL[] jarUrl = new URL[] { new URL("file://" + classpath + "/") };
-		setJdbcJarLoader(new URLClassLoader(jarUrl, this.getClass()
+	private IProject[] wsprojects;
+    private  List<URL> urls;  
+	
+	public ServiceClassLoader(List<String> classlist, String projectClasspath,
+			AnnotationProcesser processer, IClasspathEntry[] rawClasspath,IProject[] wsprojects)
+			throws MalformedURLException, ClassNotFoundException,Exception {
+		    urls = new ArrayList<URL>(); 
+		    urls.add(new File(projectClasspath).toURL());
+		    this.wsprojects =wsprojects;
+		setJdbcJarLoader(new URLClassLoader((URL[]) urls.toArray(new URL[0]), this.getClass()
 				.getClassLoader()));
 		setTestClassesList(getTestClassesList(getJdbcJarLoader(), classlist,
 				processer));
-		setRawClasspath(rawClasspath);
-		loadJarServiceClasses(jarUrl);
+		addRawClasspath(rawClasspath);
+		loadJarServiceDependancies(0);
 
 	}
 
-	public Class<?> getclass(String classname) throws ClassNotFoundException{
+	public Class<?> getclass(String classname) throws Exception{
 		return Class.forName(classname,true,getJdbcJarLoader());	
 	}
  
@@ -49,10 +59,9 @@ public class ServiceClassLoader {
 			for (String classname : classNameList) {
 				try {
 					Class<?> type = Class.forName(classname, true, jdbcJarLoader);
-					if (processer.isTestClasses(type)) {
-						classList.add(new AnnotatedTestClass(type, processer
-								.getiService(), processer.getImplService(),
-								processer.getLibraries()));
+					String imple =processer.getTestClazzImple(type);
+					if (imple!=null) {
+						classList.add(new AnnotatedTestClass(type,imple));
 					}
 				} catch (Throwable e) {
 					 
@@ -67,39 +76,107 @@ public class ServiceClassLoader {
 	 * If user given the service or imple classes as jars this methods will add those
 	 * jars into class loader
 	 * @param jarUrl - current class loader 
+	 * @throws Exception 
 	 * @throws MalformedURLException
 	 */
-	private void loadJarServiceClasses(URL[] jarUrl) throws MalformedURLException{
- 
-		 List<URL> urls = new ArrayList<URL>(); 
-		 for (AnnotatedTestClass annotatedTestClass : testClassesList) {
-			 
-			 String[] libraries = annotatedTestClass.getLibraries();
-		 
-			 for (String lib : libraries) {
-				if(lib.contains(".jar")){
-					urls.add(getURL(lib));
+	private void loadJarServiceDependancies(int count) throws Exception {
+
+		for (AnnotatedTestClass annotatedTestClass : testClassesList) {
+
+			try {
+				String ServiceName  =annotatedTestClass.getImplService();
+				URLClassLoader jdbcJarLoader2 = getJdbcJarLoader();
+				Class<?> clazz = Class.forName(ServiceName, true,jdbcJarLoader2);
+				Class<?>[] interfaces = clazz.getInterfaces();
+				if (interfaces != null) {
+					annotatedTestClass.setiService(interfaces[0].getName());
+					getclass(annotatedTestClass.getiService());
 				}
+
+			} catch (ClassNotFoundException e) {
+				if (count == 0) {
+					if (findClazz(e.getMessage())) {
+						loadJarServiceDependancies(1);
+					}
+				}
+				throw e;
+			} catch (NoClassDefFoundError e) {
+				if (count == 0) {
+					if (findClazz(e.getCause().getMessage())) {
+						loadJarServiceDependancies(1);
+					}
+				}
+				throw e;
 			}
 		}
-		 if(urls.size()>0){
-			  urls.add(jarUrl[0]);
-			  URL[] url = (URL[]) urls.toArray(new URL[0]);
-			  setJdbcJarLoader(new URLClassLoader(url,this.getClass().getClassLoader()));
-		 }
-	}
+	}	
+	
+	private boolean findClazz(String clazz) throws Exception{
+		
+		 for (IProject pr : wsprojects) {
+			 if(pr.isOpen()){
+				 List<String> classes = ServiceClassLoader.getClasses(pr,clazz);
+				if(classes!=null){
+					IJavaProject jp = JavaCore.create(pr);
+					IPath outputLocation = jp.getOutputLocation();
+					String projectClasspath = ResourcesPlugin.getWorkspace().getRoot()
+							.getFolder(outputLocation).getLocation().toFile()
+							.toString();
+					File nf = new File(projectClasspath);
+					urls.add(nf.toURL());
+					setJdbcJarLoader(new URLClassLoader((URL[]) urls.toArray(new URL[0]), this.getClass()
+							.getClassLoader()));
+					return true;
+	                 	}
+		     	 }
+		 }	
+		return false;
+	} 
+	
  
-	@SuppressWarnings("deprecation")
+	/*@SuppressWarnings("deprecation")
 	private URL getURL(String path) throws MalformedURLException{
 		for (IClasspathEntry iClasspathEntry : rawClasspath) {
+			
 			if(iClasspathEntry.getPath().toString().contains(path)){
 				File f = new File(iClasspathEntry.getPath().toString());
 				return f.toURL();
 			}
 		}
 		return null;
+	}*/
+
+	public static List<String> getClasses(IProject project,String classname){
+		IJavaProject jp = JavaCore.create(project);
+		  List<String> classesList = new ArrayList<String>();
+		  boolean isclassavilable=false;
+			try {
+				IPackageFragment[] packageFragments = jp.getPackageFragments();
+				for (IPackageFragment fragment : packageFragments) {
+							ICompilationUnit[] compilationUnits = fragment.getCompilationUnits();
+							for (ICompilationUnit unit : compilationUnits) {
+								IType[] types = unit.getTypes();
+								for (IType type : types) {
+									if(classname!=null){
+										if(classname.equals(type.getFullyQualifiedName())){
+											isclassavilable =true;
+										}
+									} 
+									classesList.add(type.getFullyQualifiedName());
+								}
+							}
+					}
+			} catch (Exception e) {
+				 e.printStackTrace();
+	    }
+			 if((classname!=null)&&(!isclassavilable)){
+				 classesList=null;
+			 }	
+	return classesList;		
 	}
 
+	
+	
 	public void setJdbcJarLoader(URLClassLoader jdbcJarLoader) {
 		this.jdbcJarLoader = jdbcJarLoader;
 	}
@@ -116,12 +193,22 @@ public class ServiceClassLoader {
 		return testClassesList;
 	}
 
-	public void setRawClasspath(IClasspathEntry[] rawClasspath) {
-		this.rawClasspath = rawClasspath;
+	public void addRawClasspath(IClasspathEntry[] rawClasspath) {
+		if(rawClasspath!=null){
+			
+			for (IClasspathEntry iClasspathEntry : rawClasspath) {
+				
+				try{
+					File f = new File(iClasspathEntry.getPath().toString());
+	 				urls.add(f.toURL());
+			 	} catch (Throwable e) {
+					 
+					 /*Exception ignore*/
+				}
+				
+			}
+			setJdbcJarLoader(new URLClassLoader((URL[]) urls.toArray(new URL[0]), this.getClass()
+					.getClassLoader()));
+		}
 	}
-
-	public IClasspathEntry[] getRawClasspath() {
-		return rawClasspath;
-	}
-	
 }
